# terminal-sdk-rs

./: Cargo.toml  LICENSE  README.md  build.rs
build-rs/: Cargo.toml
build-rs/src/: lib.rs
openapi/: Cargo.toml  README.md
openapi/.openapi-generator/: FILES
openapi/docs/: Address.md  AddressApi.md  App.md  AppOAuthApi.md  Card.md  CardApi.md  CardExpiration.md  Cart.md  CartAmount.md  CartApi.md  CartItem.md  CartShipping.md  DeleteAddressById200Response.md  ErrorResponse.md  Fixed.md  GetAddress200Response.md  GetAddressById200Response.md  GetApp200Response.md  GetAppById200Response.md  GetCard200Response.md  GetCardById200Response.md  GetCart200Response.md  GetOrder200Response.md  GetOrderById200Response.md  GetProduct200Response.md  GetProductById200Response.md  GetProfile200Response.md  GetSubscription200Response.md  GetSubscriptionById200Response.md  GetToken200Response.md  GetTokenById200Response.md  GetViewInit200Response.md  GetViewInit200ResponseData.md  MiscellaneousApi.md  Order.md  OrderAmount.md  OrderApi.md  OrderItem.md  OrderShipping.md  OrderTracking.md  (+35 more)
openapi/src/apis/: address_api.rs  app_o_auth_api.rs  card_api.rs  cart_api.rs  configuration.rs  miscellaneous_api.rs  mod.rs  order_api.rs  product_api.rs  profile_api.rs  subscription_api.rs  token_api.rs
openapi/src/models/: address.rs  app.rs  card.rs  card_expiration.rs  cart.rs  cart_amount.rs  cart_item.rs  cart_shipping.rs  delete_address_by_id_200_response.rs  error_response.rs  fixed.rs  get_address_200_response.rs  get_address_by_id_200_response.rs  get_app_200_response.rs  get_app_by_id_200_response.rs  get_card_200_response.rs  get_card_by_id_200_response.rs  get_cart_200_response.rs  get_order_200_response.rs  get_order_by_id_200_response.rs  get_product_200_response.rs  get_product_by_id_200_response.rs  get_profile_200_response.rs  get_subscription_200_response.rs  get_subscription_by_id_200_response.rs  get_token_200_response.rs  get_token_by_id_200_response.rs  get_view_init_200_response.rs  get_view_init_200_response_data.rs  mod.rs  order.rs  order_amount.rs  order_item.rs  order_shipping.rs  order_tracking.rs  post_address_200_response.rs  post_address_request.rs  post_app_200_response.rs  post_app_200_response_data.rs  post_app_request.rs  (+26 more)
src/: lib.rs
