[package]
name = "build-rs"
description = "Library used in the build script for generating API client code"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
syn = { version = "2.0.100", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.94"

[dev-dependencies]
tempfile = "3.19.1"
