[package]
name = "openapi"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors", "Terminal Products, Inc.", "Travis Aaron Wagner <dev@techsavvytravvy.com>"]
description = "The Terminal API gives you access to the same API that powers the award winning Terminal SSH shop (`ssh terminal.shop`)."
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
